// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an error when present 1`] = `
<div
  className="row  error"
  id="5678"
>
  <label>
    Test
  </label>
  <input
    autoComplete="off"
    className=" error"
    maxLength={30}
    onChange={[Function]}
    placeholder="Please enter your loyalty number"
    size={30}
    title=" Incorrect loyalty number"
    type="text"
    value=""
  />
</div>
`;

exports[`renders the form numeric input correctly 1`] = `
<div
  className="row "
  id="1234"
>
  <label>
    Test
  </label>
  <input
    autoComplete="off"
    className=""
    maxLength={30}
    onChange={[Function]}
    placeholder="Please enter your loyalty number"
    size={30}
    title=" "
    type="number"
    value=""
  />
</div>
`;

exports[`renders the form text input correctly 1`] = `
<div
  className="row "
  id="1234"
>
  <label>
    Test
  </label>
  <input
    autoComplete="off"
    className=""
    maxLength={30}
    onChange={[Function]}
    placeholder="Please enter your loyalty number"
    size={30}
    title=" "
    type="text"
    value=""
  />
</div>
`;

exports[`should call onChange when an input is entered 1`] = `
<div
  className="row "
>
  <input
    autoComplete="off"
    className=""
    id="email"
    maxLength={30}
    name="email"
    onChange={[Function]}
    placeholder=""
    size={30}
    title=" "
    type="text"
    value="test@johnlewis.co.uk"
  />
  <span
    className="clearInput"
  >
    <Icon
      as="i"
      circular={true}
      id="removeemail"
      link={true}
      name="remove"
      onClick={[Function]}
      size="small"
    />
  </span>
</div>
`;
